--- a/generators/app/templates/d8/_theme.libraries.yml
+++ b/generators/app/templates/d8/_theme.libraries.yml
@@ -1,17 +1,17 @@
 # Related docs:
 # https://www.drupal.org/node/2216195
 
-global-css:
+<%= themeName %>_global-css:
   css:
     theme:
       build/css/styles.css: {}
       # Example passing <link> attribute
       # build/css/print.css: { media: print }
 
-global-js:
+<%= themeName %>_global-js:
   js:
     build/js/responsive.js: {}
-    build/js/rapid.js: {}
+    build/js/<%= themeName %>.js: {}
 
   dependencies:
    - core/jquery
