--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-rapid",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Yeoman generator",
   "license": "MIT",
   "main": "app/index.js",
@@ -23,15 +23,16 @@
     "yeoman-generator"
   ],
   "dependencies": {
-    "yeoman-generator": "^0.17.0",
-    "chalk": "^0.5.0",
-    "yosay": "^0.3.0",
-    "underscore.string": "~2.3.3",
+    "chalk": "^1.1.1",
+    "escape-string-regexp": "^1.0.5",
     "execSync": "~1.0.1-pre",
-    "rimraf": "~2.2.0"
+    "rimraf": "~2.5.2",
+    "underscore.string": "~3.3.4",
+    "yeoman-generator": "^0.22.5",
+    "yosay": "^1.1.0"
   },
   "devDependencies": {
-    "lodash": "^3.7.0",
+    "lodash": "^4.6.1",
     "mocha": "*"
   },
   "peerDependencies": {
