remove modernizr from d7

--- a/generators/app/templates/d8/_theme.libraries.yml
+++ b/generators/app/templates/d8/_theme.libraries.yml
@@ -19,8 +19,7 @@
    #- core/drupal # Includes Drupal Behaviors!
    - core/jquery
    - core/jquery.once
-   <% if (modernizr) { %>
-   - <%= themeName %>/modernizr<% } %>
+   - <%= themeName %>/modernizr
    <% if (enquire) { %>
    - <%= themeName %>/mediaMatch
    - <%= themeName %>/enquire<% } %>
